# geo-base

./: .buckconfig  .gitignore  .travis.sh  .travis.yml  BUCK  BUILD  CMakeLists.txt  LICENSE  README.md  SConstruct  WORKSPACE  algo.h  edge.h  exception.h  fd_base.h  fd_guard.h  fd_stat.h  generate.cpp  generate.h  geo-base-plot.py  geo_base.cpp  geo_base.h  geo_base_alloc.h  geo_base_generate.cpp  geo_base_load.h  geo_base_perf.cpp  geo_base_run.cpp  geo_base_show.cpp  geo_data.cpp  geo_data.h  geo_osm_txt.cpp  geo_txt_filt.cpp  geo_txt_grep.cpp  io.h  library.h  location.h  log.h  mem_base.h  mmap_guard.h  part.h  (+6 more)
bazel/: gmock.BUILD  jemalloc.BUILD  zlib.BUILD
contrib/: CMakeLists.txt  SConscript
contrib/osmpbf/osmpbf/: CMakeLists.txt  osmformat.proto
example/: CMakeLists.txt  convert.cc  geo_base_lookup.c  geo_base_proto.cpp  grep_boundary_ways.cc  simple_counter.cc  weak_consistency_check.cc
generator/: CMakeLists.txt  generator.cc  generator.h  geo_data.h  locations_converter.h  storage.h
geo_base/: CMakeLists.txt  area_box.h  box.h  edge.h  fd_base.h  geo_base.h  geo_base_alloc.h  geo_base_generate.cpp  geo_base_generate.h  geo_data.cc  geo_data.h  geo_data_debug.cc  geo_data_def.h  geo_data_map.cc  geo_data_map.h  kv.h  location.h  log.cpp  log.h  part.cc  part.h  point.h  polygon.cc  polygon.h  rectangle.h  region.h  stopwatch.h  system.cc  unordered_map.h  util.cpp
include/: algo.h  algo.hpp  base_alloc.h  base_alloc.hpp  box.h  box.hpp  common.h  common.hpp  edge.h  edge.hpp  exception.hpp  fd_base.h  fd_base.hpp  fd_guard.h  fd_guard.hpp  fd_stat.hpp  geo_base.h  geo_base.hpp  geo_base_alloc.h  geo_base_alloc.hpp  geo_base_generate.h  geo_base_generate.hpp  geo_data.h  geo_data.hpp  hash.h  hash.hpp  io.h  io.hpp  kv.h  kv.hpp  location.h  location.hpp  log.h  log.hpp  mem_base.h  mem_base.hpp  mmap_guard.h  mmap_guard.hpp  part.h  part.hpp  (+14 more)
junk/: BUCK  BUILD  CMakeLists.txt  convert.cc  convert.cpp  geo_base_benchmark.cpp  geo_base_fcgi.cc  geo_base_fcgi.cpp  geo_base_generate.cpp  geo_base_run.cpp  geo_base_stat.cpp  grep_boundary_ways.cc  grep_boundary_ways.cpp  simple_counter.cc  simple_counter.cpp  weak_consistency_check.cpp  write_proto.cc  write_proto.cpp  write_proto_loop.cc  write_proto_loop.cpp
open_street_map/: converter.cc  converter.h  open_street_map.cc  open_street_map.h  parser.cc  parser.h  reader.cc  reader.h  simple_counter.h  weak_consistency_checker.h
proto/: CMakeLists.txt  fileformat.proto  geo_data.proto  region.proto
proto_util/: proto_reader.cc  proto_reader.h  proto_writer.h
scons/: protoc.py
src/: CMakeLists.txt  algo.h  base_alloc.h  blob.h  box.h  common.h  edge.h  fd_guard.h  generate.cpp  generate.h  geo_base.cpp  geo_base.h  geo_base_allocator.h  geo_base_generate.cc  geo_base_generate.cpp  geo_base_generate.h  geo_base_run.cpp  geo_base_show.cpp  geo_data.cc  geo_data.cpp  geo_data.h  geo_data_wrapper.h  geo_osm_convert.cpp  geo_read_txt.h  hash.h  io.cc  io.cpp  io.h  key_value.h  kv.h  library.h  location.h  log.cpp  log.h  memory_mapped_file.h  mmap_guard.h  osm_pbf_convert.cpp  part.h  point.h  polygon.h  (+10 more)
src/geo_base/: CMakeLists.txt  algo.h  area_box.h  crc32.cc  crc32.h  edge.cc  edge.h  exception.h  fd_guard.h  file.cc  file.h  file_guard.h  geo_base.cc  geo_base_generate.cc  geo_base_generate.h  geo_data.cc  geo_data.h  geo_data_debug.cc  geo_data_debug.h  geo_data_def.h  geo_data_map.cc  geo_data_map.h  geo_data_serialize.h  geo_data_wrapper.h  io.cc  kv.h  location.h  log.cc  log.h  mapped_memory_allocator.h  mapped_memory_guard.h  memory_mapped_file.cc  memory_mapped_file.h  memory_unit.h  memory_units.h  mmap_guard.h  part.cc  part.h  point.h  polygon.cc  (+7 more)
src/geo_base/generator/: CMakeLists.txt  generator.cc  generator.h  geo_data.h  locations_converter.h  storage.h
src/geo_base/open_street_map/: CMakeLists.txt  converter.cc  converter.h  open_street_map.cc  open_street_map.h  parser.cc  parser.h  reader.cc  reader.h  simple_counter.h  weak_consistency_checker.h
src/geo_base/open_street_map/proto/: CMakeLists.txt  open_street_map.proto
src/geo_base/proto/: CMakeLists.txt  geo_data.proto  region.pb.cc  region.pb.h  region.proto
src/geo_base/proto_util/: CMakeLists.txt  proto_reader.h
src/geo_base/util/: CMakeLists.txt  algo.h  allocator.h  base_allocator.cc  base_allocator.h  base_stream.h  block_allocator.cc  block_allocator.h  dynarray.h  exception.h  fd_guard.h  file.cc  file.h  file_stream.cc  file_stream.h  io_stream.h  je_allocator.h  log.cc  log.h  mem_file.cc  mem_file.h  mem_guard.h  mem_stream.h  memory.h  pool_allocator.cc  pool_allocator.h  safe_stream.h  stop_watch.h  system.cc  system.h
test/: CMakeLists.txt  algo.cc  algo.cpp  andorra-latest.dat.pre  area_box.cpp  base_allocator.cc  base_allocator.cpp  converter.cc  converter.cpp  dynarray.cc  dynarray.cpp  edge.cc  edge.cpp  exception.cc  exception.cpp  fd_guard.cc  fd_guard.cpp  file.cc  file.cpp  generator.cc  generator.cpp  geo_base_test.h  geo_data_map.cc  geo_data_map.cpp  geo_data_serialize.cc  grep_boundary_ways.cc  grep_boundary_ways.cpp  location_converter.cc  locations_converter.cc  locations_converter.cpp  log.cc  log.cpp  lookup.cpp  mem_file.cc  mem_file.cpp  osm_amount.cc  osm_parser.cc  parser.cc  parser.cpp  part.cc  (+6 more)
test/gmock/: CMakeLists.txt
test/gmock/gmock/: CMakeLists.txt
test/osm/: andorra-latest.osm.pbf
test/ut/: edge.cc  example.cc  geo_base_test.h  part.cc  point.cc  test.h
tool/: CMakeLists.txt  command.h  get_opt.cc  get_opt.h  main.cc
tools/: BUILD  geo-base-generate.pl  geo-base-plot.py  geo_base_benchmark.cpp  geo_base_convert.cc  geo_base_convert.cpp  geo_base_dist.cpp  geo_base_filt.cpp  geo_base_generate.cc  geo_base_generate.cpp  geo_base_grep.cc  geo_base_grep.cpp  geo_base_perf.cc  geo_base_perf.cpp  geo_base_rand.cpp  geo_base_repeat.cpp  geo_base_run.cc  geo_base_run.cpp  geo_base_show.cc  geo_base_show.cpp  geo_base_sift.cc  geo_base_sift.cpp  geo_base_stat.cpp  geo_osm_txt.cpp  geo_txt_filt.cpp  geo_txt_grep.cpp  get_opt.cc  get_opt.h  grep_boundary_ways.cpp  quick_start.cc  (+4 more)
(+234 files in other folders)
