PROJECT(geo_base CXX C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)

ADD_SUBDIRECTORY(deps)

ADD_DEFINITIONS(
	-Wall
	-Werror
	-funroll-loops
	-std=c++0x
)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${FCGI_SOURCE_DIR}
	${GMOCK_SOURCE_DIR}
	${JEMALLOC_SOURCE_DIR}
	${PROTOBUF_SOURCE_DIR}
	${ZLIB_SOURCE_DIR}
)

ADD_SUBDIRECTORY(geo_base)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(junk)
