ADD_EXECUTABLE(simple-counter simple_counter.cc)
ADD_EXECUTABLE(grep-boundary-ways grep_boundary_ways.cc)
ADD_EXECUTABLE(convert convert.cc)
ADD_EXECUTABLE(weak-consistency-check weak_consistency_check.cc)
ADD_EXECUTABLE(write-proto write_proto.cc)
ADD_EXECUTABLE(write-proto-loop write_proto_loop.cc)
ADD_EXECUTABLE(geo-base-fcgi geo_base_fcgi.cc)

TARGET_LINK_LIBRARIES(simple-counter geo-base)
TARGET_LINK_LIBRARIES(grep-boundary-ways geo-base)
TARGET_LINK_LIBRARIES(convert geo-base)
TARGET_LINK_LIBRARIES(weak-consistency-check geo-base)
TARGET_LINK_LIBRARIES(write-proto geo-base)
TARGET_LINK_LIBRARIES(write-proto-loop geo-base)
TARGET_LINK_LIBRARIES(geo-base-fcgi geo-base fcgi)
