FIND_PACKAGE(Protobuf REQUIRED)

INCLUDE_DIRECTORIES(
	${PROTOBUF_INCLUDE_DIRS}
	${CMAKE_CURRENT_BINARY_DIR}
)

PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS
	fileformat.proto
	osmformat.proto
)

ADD_LIBRARY(osmpbf
	${PROTO_SRCS}
	${PROTO_HDRS}
)

TARGET_LINK_LIBRARIES(osmpbf
	${PROTOBUF_LIBRARIES}
)
