FIND_PACKAGE(Protobuf REQUIRED)

INCLUDE_DIRECTORIES(
	${PROTOBUF_INCLUDE_DIRS}
	${CMAKE_CURRENT_BINARY_DIR}
)

PROTOBUF_GENERATE_CPP(
	PROTO_SRCS
	PROTO_HDRS
	geo_data.proto
	region.proto
)

ADD_LIBRARY(
	geo-base-proto
	${PROTO_SRCS}
	${PROTO_HDRS}
)

TARGET_LINK_LIBRARIES(
	geo-base-proto
	${PROTOBUF_LIBRARIES}
)
